# openstix-python

./: .devcontainer.json  .gitignore  INFO.md  README.md  TODO.md  hatch.toml  mkdocs.yml  pyproject.toml
.github/workflows/: pull-request.yml  release.yml
docs/: conf.py  generate.py  generation.py  index.md  index.rst
docs/_generated/: modules.rst
docs/_generated/definitions/: ExtensionDefinition.rst  MarkingDefinition.rst
docs/_generated/objects/: Artifact.rst  AttackPattern.rst  AutonomousSystem.rst  Campaign.rst  CourseOfAction.rst  Directory.rst  DomainName.rst  EmailAddress.rst  EmailMessage.rst  File.rst  GranularMarking.rst  Grouping.rst  IPv4Address.rst  IPv6Address.rst  Identity.rst  Incident.rst  Indicator.rst  Infrastructure.rst  IntrusionSet.rst  LanguageContent.rst  Location.rst  MACAddress.rst  Malware.rst  MalwareAnalysis.rst  Mutex.rst  NetworkTraffic.rst  Note.rst  ObservedData.rst  Opinion.rst  Process.rst  Relationship.rst  Report.rst  Sighting.rst  Software.rst  StatementMarking.rst  TLPMarking.rst  ThreatActor.rst  Tool.rst  URL.rst  UserAccount.rst  (+3 more)
docs/_generated/toolkit/: Environment.rst  ObjectFactory.rst  Workspace.rst  custom.rst  exceptions.rst  filters.rst  sinks.rst  sources.rst  stores.rst
docs/_generated/toolkit/_autosummary/: openstix.toolkit.stores.rst
docs/assets/css/: overrides.css
docs/example/: modules.rst
docs/example/_autosummary/: openstix.toolkit.Workspace.rst
docs/pages/: reference.md  setup.md
docs/pages/datasets/: geolocation.md  mitre.md  setup.md
docs/pages/reference/: workspace.md
docs/pages/usecases/: usecase1.md
docs/pages/workspace/: overview.md
docs/pages/workspace/advanced/: filters.md  related.md  similar.md
docs/pages/workspace/basic/: create.md
docs/reference/: extensions.rst  index.rst
docs/reference/objects/: index.rst
docs/reference/toolkit/: index.rst
example/: library.rst  modules.rst  toolkit.rst
example/_autosummary/: openstix.toolkit.stores.MemoryStore.rst
openstix/: __init__.py  definitions.py  mappings.py  vocab.py
openstix/datasets/: __init__.py  _base.py  mitre.py
openstix/objects/: __init__.py
openstix/properties/: types.py
openstix/toolkit/: _base.py
openstix/toolkit/filters/: presets.py
openstix/utils/: __init__.py  common.py  markings.py
scripts/: generator.py
src/: script.py
src/examples/: script.py
src/openstix/: __init__.py  __main__.py  _base.py  definitions.py  mappings.py  registry.py  vocab.py
src/openstix/datasets/: __init__.py  __main__.py  _base.py  geolocations.py  mitre.py  tlps.py
src/openstix/extensions/: __init__.py
src/openstix/objects/: __init__.py  custom.py
src/openstix/objects/scos/: __init__.py  custom.py
src/openstix/objects/scos/extensions/: __init__.py
src/openstix/objects/sdos/: __init__.py
src/openstix/objects/sdos/extensions/: __init__.py
src/openstix/objects/smos/: __init__.py
src/openstix/objects/sros/: __init__.py
src/openstix/objects/sros/extensions/: __init__.py
src/openstix/properties/: __init__.py  types.py
src/openstix/toolkit/: __init__.py  _base.py  custom.py  exceptions.py  factory.py  sinks.py  sources.py  stores.py
src/openstix/toolkit/filters/: __init__.py  presets.py
src/openstix/utils/: __init__.py  patterns.py
