[build-system]
requires = ["poetry-core>=1.0.0", "hatchling]
build-backend = "poetry.core.masonry.api"

[project]
name = "openstix"
version = "0.1.0"
authors = [{name = "Tomás Lima", email = "tomas@abusetotal.com"}, {name = "Adrian Dinis", email = "adrian@abusetotal.com"}]
description = "OpenSTIX aims to make STIX easy and accessible for analysts"
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.9"
keywords = [
    "STIX2", "cybersecurity", "threat-intelligence", "toolkit", "python",
    "library", "threat-indicators", "TTPs", "IOC", "CTI",
    "malware-analysis", "network-security"
]
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Framework :: STIX2",
]

[project.urls]
Homepage = "https://github.com/abusetotal/openstix"
Repository = "https://github.com/abusetotal/openstix"
Changelog = "https://github.com/abusetotal/openstix/releases"
Documentation = "https://github.com/abusetotal/openstix/blob/main/README.md"

[tool.poetry]
name = "openstix"
version = "0.1.0"
authors = ["Tomás Lima <tomas@abusetotal.com>", "Adrian Dinis <adrian@abusetotal.com>"]
description = "OpenSTIX aims to make STIX easy and accessible for analysts"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
stix2 = "^3.0.1"

[tool.poetry.group.dev]
optional=true

[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
isort = "^5.11.3"
flake8-pyproject = "^1.2.2"
flake8-isort = "^6.0.0"
flake8-black = "^0.3.6"
pytest = "^7.2.0"

[tool.poetry.group.tools.dependencies]
flake8-pyproject = "^1.2.3"

[tool.flake8]
max-line-length = 120
ignore = ["E203"]
per-file-ignores = [
  "__init__.py:F401,F403",
]

[tool.isort]
profile = "black"
line_length = 120
length_sort = true
force_sort_within_sections = true
reverse_sort = true
multi_line_output = 3
skip = ["migrations"]
sections="FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER"

[tool.black]
line-length = 120