[build-system]
requires = ["hatchling>=1.18.0", "hatch-vcs>=0.3.0"]
build-backend = "hatchling.build"

[project]
name = "openstix"
version = "0.1.5"
description = "OpenSTIX aims to make STIX easy and accessible for analysts"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.9"
keywords = [
    "STIX2", "cybersecurity", "threat-intelligence", "toolkit", "python",
    "library", "threat-indicators", "TTPs", "IOC", "CTI",
    "malware-analysis", "network-security"
]
authors = [
    {name = "Tomás Lima", email = "tomas@abusetotal.com"},
    {name = "Adrian Dinis", email = "adrian@abusetotal.com"}
]
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
  "stix2>=3.0.1",
  "click>=8.1.7",
  "requests>=2.31.0",
  "countryinfo>=0.1.2"
]

[project.urls]
Homepage = "https://github.com/abusetotal/openstix"
Sponsor = "https://github.com/sponsors/abusetotal"
Tracker = "https://github.com/abusetotal/openstix/issues"
Source = "https://github.com/abusetotal/openstix"

[project.scripts]
openstix-datasets = "openstix.datasets.__main__:main"

[tool.hatch.version.raw-options]
version_scheme = "python-simplified-semver"
local_scheme = "no-local-version"
git_describe_command = ["git", "describe", "--dirty", "--tags", "--long", "--match", "v*"]

[tool.hatch.build]
ignore-vcs = true
only-packages = true
packages = ["src/openstix"]

[tool.hatch.envs.default]
type = "virtual"
path = ".venv/default"

[tool.hatch.envs.default.scripts]
release = "tbd"
run = "tbd"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]
ignore = []
fixable = ["ALL"]
unfixable = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.isort]
known-first-party = ["openstix"]

[tool.ruff.flake8-tidy-imports]
ban-relative-imports = "all"